<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gpsprofile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="record_start">Start recording</string>    
	<string name="record_finish">Stop recording</string>    
	<string name="enabled_gps">EnabledGPS???</string>
	<string name="location_gps">LocationGPS???</string>
	<string name="status_gps">StatusGPS???</string>	

</resources>
